Contrast: Fix margins

--- a/styles/palette.css
+++ b/styles/palette.css
@@ -3,7 +3,7 @@
   align-self: center;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: calc(100% - 40px * 2);  /* 40px margin on either side since margin property doesn't work */
   max-width: var(--max-width);
 }
 
